--- a/cluster/mesos/docker/docker-compose.yml
+++ b/cluster/mesos/docker/docker-compose.yml
@@ -29,7 +29,7 @@ mesosmaster1:
 mesosslave1:
   hostname: mesosslave1
   privileged: true
-  image: sttts/dind-loop
+  image: sttts/dind-loop:2
   entrypoint: [ "bash", "-c", "wrapdocker mesos-slave --hostname=$(getent hosts mesosslave1 | cut -d' ' -f1 | sort -u | tail -1)" ]
   command: ~
   environment:
@@ -52,7 +52,7 @@ mesosslave1:
 mesosslave2:
   hostname: mesosslave2
   privileged: true
-  image: sttts/dind-loop
+  image: sttts/dind-loop:2
   entrypoint: [ "bash", "-c", "wrapdocker mesos-slave --hostname=$(getent hosts mesosslave2 | cut -d' ' -f1 | sort -u | tail -1)" ]
   command: ~
   environment:
