--- a/cluster/mesos/docker/docker-compose.yml
+++ b/cluster/mesos/docker/docker-compose.yml
@@ -41,6 +41,7 @@ mesosslave1:
   - MESOS_ATTRIBUTES=rack:a;gen:2014
   - MESOS_SWITCH_USER=0
   - MESOS_CONTAINERIZERS=docker,mesos
+  - MESOS_ISOLATION=cgroups/cpu,cgroups/mem
   - MESOS_WORK_DIR=/var/tmp/mesos
   - DOCKER_NETWORK_OFFSET=0.0.1.0
   - DOCKER_DAEMON_ARGS
@@ -65,6 +66,7 @@ mesosslave2:
   - MESOS_ATTRIBUTES=rack:b;gen:2015
   - MESOS_SWITCH_USER=0
   - MESOS_CONTAINERIZERS=docker,mesos
+  - MESOS_ISOLATION=cgroups/cpu,cgroups/mem
   - MESOS_WORK_DIR=/var/tmp/mesos
   - DOCKER_NETWORK_OFFSET=0.0.2.0
   - DOCKER_DAEMON_ARGS
